--- a/src/index.html
+++ b/src/index.html
@@ -1,6 +1,7 @@
 <!doctype html>
-<html lang="en">
-<head>
+<html dir="rtl" lang="en">
+<head >
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
   <meta charset="utf-8">
   <title>PublicInquiries</title>
   <base href="/">
